2011-12-19  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* testsuite/ext/type_traits/remove_unsigned_integer_neg.cc: Adjust
	dg-error line numbers.
	* testsuite/ext/type_traits/add_unsigned_floating_neg.cc: Likewise.
	* testsuite/ext/type_traits/remove_unsigned_floating_neg.cc: Likewise.
	* testsuite/ext/type_traits/add_unsigned_integer_neg.cc: Likewise.

2011-12-19  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* include/c_global/cmath: Update copyright years.
	* include/ext/type_traits.h: Likewise.

2011-12-19  Jonathan Wakely  <jwakely.gcc@gmail.com>

	Backport from mainline
	2011-11-13  Paolo Carlini  <paolo.carlini@oracle.com>

	* include/c_global/cmath (atan2, pow): Simplify constraining on the
	return type.

	Backport from mainline
	2011-11-12  Jonathan Wakely  <jwakely.gcc@gmail.com>

	PR libstdc++/51083
	* include/ext/type_traits.h (__promote): Only define __type member
	for integral and floating point types, to prevent math functions
	participating in overload resolution for other types.
	(__promote_2, __promote_3, __promote_4): Use __promote in default
	template argument values, so deduction only succeeds for integral and
	floating point types.
	* testsuite/26_numerics/cmath/51083.cc: New.
	* testsuite/26_numerics/complex/51083.cc: New.
	* testsuite/tr1/8_c_compatibility/cmath/51083.cc: New.
	* testsuite/tr1/8_c_compatibility/complex/51083.cc: New.

2011-12-19  Jonathan Wakely  <jwakely.gcc@gmail.com>

	PR libstdc++/50862
	* include/std/condition_variable (condition_variable_any::wait): Fix
	deadlock and ensure _Lock::lock() is called on exit.
	* testsuite/30_threads/condition_variable_any/50862.cc: New.

2011-12-18  Jonathan Wakely  <jwakely.gcc@gmail.com>

	PR libstdc++/51540
	* include/bits/stl_numeric.h (partial_sum): Adjust doxygen comments.

2011-11-20  Andreas Tobler  <andreast@fgznet.ch>

	* configure: Regenerate.

2011-11-16  Paolo Carlini  <paolo.carlini@oracle.com>

	PR libstdc++/51142